finish header and search sass without animation

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
         <form>
             <div class="search_town">
                 <i class="fa-solid fa-location-dot"></i>
-                <input  placeholder="Paris,Belleville">
+                <input  type="search" placeholder=" Paris,Belleville">
             </div>
             <h1>Réservez le menu qui vous convient</h1>
             <h2>Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
             <button>Explorer nos restaurants</button>
         </form>
     </section>
-    <section>
+    <section class="working">
         <h2>Fonctionnement</h2>
-        <ul>
-            <li>choisisez un restaurant</li>
-            <li>Composez votre menu</li>
-            <li>Dégustez au restaurant</li>
-        </ul>
+        <ol>
+            <li><span class="_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i>choisisez un restaurant</li>
+            <li><span class="_numbericon">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+            <li><span class="_numbericon">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+        </ol>
 
     </section>
     <section>
