--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="wridth=device-width, initial-scale=1.0">
@@ -14,33 +15,77 @@
 
 <body>
     <header>
-        
+
         <img src=".public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <section class="search">
         <form>
             <div class="search_town">
                 <i class="fa-solid fa-location-dot"></i>
-                <input  type="search" placeholder=" Paris,Belleville">
+                <input type="search" placeholder=" Paris,Belleville">
             </div>
             <h1>Réservez le menu qui vous convient</h1>
             <h2>Découvrez des restaurants d'exception, séléctionnés par nos soins.</h2>
             <button>Explorer nos restaurants</button>
         </form>
     </section>
+
     <section class="working">
+
         <h2>Fonctionnement</h2>
+
         <ol>
-            <li><span class="_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i>choisisez un restaurant</li>
-            <li><span class="_numbericon">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
-            <li><span class="_numbericon">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+            <li><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisisez un
+                restaurant</li>
+            <li><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+            <li><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
         </ol>
 
     </section>
-    <section>
+    <section class="restaurant">
         <h2>Restaurants</h2>
+        <article>
+            <div class="restaurant_new">Nouveau</div>
+            <img src=".public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="platdu restaurant La palette du goût">
+            <h3>La palette du goût</h3>
+            <p>Ménilmontant</p>
+            <i class="fa-regular fa-heart"></i>
+        </article>
+        <article>
+            <div class="restaurant_new">Nouveau</div>
+            <img src=".public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="plat du restaurant La note enchantée">
+            <h3>La note enchantée</h3>
+            <p>Charonne</p>
+            <i class="fa-regular fa-heart"></i>
+        </article>
+        <article>
+            <img src=".public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="plat du restaurant À la française ">
+            <h3>À la française</h3>
+            <p>Cité Rouge</p>
+            <i class="fa-regular fa-heart"></i>
+        </article>
+        <article>
+            <img src=".public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="plat du restaurant Le délic des sense ">
+            <h3>Le délic des sense</h3>
+            <p>Folie-Méricourt</p>
+            <i class="fa-regular fa-heart"></i>
+        </article>
 
     </section>
-
+    <footer>
+        <img src=".public/images/logo/ohmyfood.png " alt="logo ohmyfood">
+        <ul>
+            <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+            <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+        </ul>
+        
+    </footer>
 </body>
+
 </html>
