--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <article>
             <img src=".public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="plat du restaurant Le délic des sense ">
-            <h3>Le délic des sense</h3>
+            <h3>Le délic des sens</h3>
             <p>Folie-Méricourt</p>
             <i class="fa-regular fa-heart"></i>
         </article>
