--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
 
-        <img src=".public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <section class="search">
         <form>
