--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href=".public/css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <title>ohmyfood</title>
-    <link rel="icon" href=".public/images/logo/ohmyfood@2x.svg">
+    <link rel="icon" href="public/images/logo/ohmyfood@2x.svg">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
         <h2>Restaurants</h2>
         <article>
             <div class="restaurant_new">Nouveau</div>
-            <img src=".public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="platdu restaurant La palette du goût">
             <h3>La palette du goût</h3>
             <p>Ménilmontant</p>
@@ -54,21 +54,21 @@
         </article>
         <article>
             <div class="restaurant_new">Nouveau</div>
-            <img src=".public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+            <img src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="plat du restaurant La note enchantée">
             <h3>La note enchantée</h3>
             <p>Charonne</p>
             <i class="fa-regular fa-heart"></i>
         </article>
         <article>
-            <img src=".public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="plat du restaurant À la française ">
             <h3>À la française</h3>
             <p>Cité Rouge</p>
             <i class="fa-regular fa-heart"></i>
         </article>
         <article>
-            <img src=".public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            <img src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="plat du restaurant Le délic des sense ">
             <h3>Le délic des sens</h3>
             <p>Folie-Méricourt</p>
@@ -77,7 +77,7 @@
 
     </section>
     <footer>
-        <img src=".public/images/logo/ohmyfood.png " alt="logo ohmyfood">
+        <img src="public/images/logo/ohmyfood.png " alt="logo ohmyfood">
         <ul>
             <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
             <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
