--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </section>
     <section class="restaurant">
         <h2>Restaurants</h2>
-        <article>
+        <div class="container">
+            <a href="/menue/la-palette-du-gout.html">
+            <article>
             <div class="restaurant_new">Nouveau</div>
             <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="platdu restaurant La palette du goût">
@@ -52,6 +54,8 @@
             <p>Ménilmontant</p>
             <i class="fa-regular fa-heart"></i>
         </article>
+    </a>
+    <a href="/menue/la-note-enchantee.html">
         <article>
             <div class="restaurant_new">Nouveau</div>
             <img src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -60,6 +64,8 @@
             <p>Charonne</p>
             <i class="fa-regular fa-heart"></i>
         </article>
+    </a>
+    <a href="/menue/a-la-francaise.html">
         <article>
             <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="plat du restaurant À la française ">
@@ -67,14 +73,17 @@
             <p>Cité Rouge</p>
             <i class="fa-regular fa-heart"></i>
         </article>
+    </a>
+    <a href="/menue/le-declice-des-sens.html">
         <article>
             <img src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="plat du restaurant Le délic des sense ">
-            <h3>Le délic des sens</h3>
+                alt="plat du restaurant Le délice des sense ">
+            <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
             <i class="fa-regular fa-heart"></i>
         </article>
-
+    </a>
+<div>
     </section>
     <footer>
         <img src="public/images/logo/ohmyfood.png " alt="logo ohmyfood">
