add div for css

--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -14,33 +14,34 @@
     <link rel="icon" href="../public/images/logo/ohmyfood@2x.svg">
 </head>
 <body>
+    <div class="lightgrey-background">
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <section class="entete">
         <img src="../public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat Le délice des sens">
-        <div class="entete_title"></div>
+        <div class="entete_title">
         <h1 class="police">Le délice des sens</h1>
         <i class="fa-regular fa-heart"></i>
         </div>
     </section>
     <article>
-        <h2>ENTRÉES</h2>
+        <h2 class="title-menue">ENTRÉES</h2>
         <ul class="container-menue">
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Ravioles de foie gras</h3>
                 <p>Accompagnés de leur crème à la truffe <span class="prix">25€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Caviar osciètre</h3>
                 <p>Sur blini à la farine de blé noir<span class="prix">35€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Homard et espuma de légumes</h3>
                 <p>Mariné aux zests d'orange <span class="prix">20e</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Foie gras de canard cuit entier</h3>
                 <p>Confiture de figue et pain toasté <span class="prix">35e</span></p>
             </li>
@@ -48,43 +49,43 @@
 
     </article>
     <article>
-        <h2>PLATS</h2>
+        <h2 class="title-menue">PLATS</h2>
         <ul class="container-menue">
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Noix de coquilles Saint-jacques</h3>
                 <p>Sur lit de purée de céléri-rave<span class="prix">40€</span></p>
 
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Langoustine poêlée</h3>
                 <p>Purée de patate douce<span class="prix">35€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Mijoté de queue de boeuf</h3>
                 <p>Et riz sauvage aux zests de citron<span class="prix">44€</span></p>               
             </li>
         </ul>
     </article>
     <article>
-        <h2>DESSERT</h2>
+        <h2 class="title-menue">DESSERT</h2>
         <ul class="container-menue">
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Macaron noisette et chocolat</h3>
                 <p>Glace au caramel brun et sel de Guérande<span class="prix">18€</span></p>
 
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Baba au rhum revisité</h3>
                 <p>Avec son coulis de citron<span class="prix">22€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Tarte au citron meringuée</h3>
                 <p>Destructurée<span class="prix">23€s</span></p>               
             </li>
         </ul>
 
     </article>
-    <button>Commander</button>
+    <button class="buttom-command">Commander</button>
 
 <footer>
     <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
@@ -96,6 +97,7 @@
     </ul>
     
 </footer>
+</div>
 </body>
 
 </html>
