--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -16,6 +16,7 @@
 
 
 <body>
+    <div class="lightgrey-background">
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
@@ -29,17 +30,17 @@
         </div>
     </section>
     <article>
-        <h2>ENTRÉES</h2>
+        <h2 class="title-menue">ENTRÉES</h2>
         <ul class="container-menue">
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Tartare de poulpe acidlé</h3>
                 <p>Aux zests d'orange <span class="prix">25€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Velouté de légumes d'antan</h3>
                 <p>Carotte, panais,topinambour <span class="prix">35€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Soupe à l'oignon</h3>
                 <p>Revisitée <span class="prix">20e</span></p>
             </li>
@@ -47,36 +48,36 @@
 
     </article>
     <article>
-        <h2>PLATS</h2>
+        <h2 class="title-menue">PLATS</h2>
         <ul class="container-menue">
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Coquilles Saint-jacques</h3>
                 <p>Accompagnées d'une pureé de panais<span class="prix">40€</span></p>
 
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Magret de canard</h3>
                 <p>Et parmentier de pommes de terres<span class="prix">35€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Pigeonneau d'ille-et-Vilaine</h3>
                 <p>Sur son lit de gnocchis aux légumes<span class="prix">44€</span></p>               
             </li>
         </ul>
     </article>
     <article>
-        <h2>DESSERT</h2>
+        <h2 class="title-menue">DESSERT</h2>
         <ul class="container-menue">
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Pétales de violettes glacés</h3>
                 <p>Et purée de noisettes<span class="prix">18€</span></p>
 
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Fondant au chocolat</h3>
                 <p>Revisité<span class="prix">22€</span></p>
             </li>
-            <li class="_plat">
+            <li class="container-menue_plat">
                 <h3>Millefeuille croustillant</h3>
                 <p>Mystille et pâte d'amande<span class="prix">23€s</span></p>               
             </li>
@@ -94,6 +95,7 @@
     </ul>
     
 </footer>
+</div>
 </body>
 
 </html>
