--- a/menue/la-palette-du-gout.html
+++ b/menue/la-palette-du-gout.html
@@ -13,30 +13,31 @@
     <title>ohmyfood</title>
     <link rel="icon" href="../public/images/logo/ohmyfood@2x.svg">
 </head>
-<body>
+<body class="menue">
+    <div class="lightgrey-background">
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
     <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
 </header>
 <section class="entete">
     <img src="../public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat La palette du goût">
-    <div class="entete_title"></div>
+    <div class="entete_title">
     <h1 class="police">La palette du goût</h1>
     <i class="fa-regular fa-heart"></i>
 </div>
 </section>
-<article>
-    <h2>ENTRÉES</h2>
+<article >
+    <h2 class="title-menue">ENTRÉES</h2>
     <ul class="container-menue">
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Fricassée d'escargot</h3>
             <p>Au piment d'espelette<span class="prix">25€</span></p>
         </li>
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Foie gras de canard mi-cui</h3>
             <p>et ses copeaux de truffe noire <span class="prix">35€</span></p>
         </li>
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Oeuf au plat</h3>
             <p>assainné à la truffe sur lit de mousse<span class="prix">20e</span></p>
         </li>
@@ -44,43 +45,43 @@
 
 </article>
 <article>
-    <h2>PLATS</h2>
+    <h2 class="title-menue">PLATS</h2>
     <ul class="container-menue">
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Filet de boeuf aux herbes</h3>
             <p>Accompagnées de sa ribambelle de légumes<span class="prix">40€</span></p>
 
         </li>
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Parmentier de queue de boeuf</h3>
             <p>À la truffe noire sur sa purée de panais<span class="prix">35€</span></p>
         </li>
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Flet de turbot</h3>
             <p>Aux agrumes<span class="prix">44€</span></p>               
         </li>
     </ul>
 </article>
 <article>
-    <h2>DESSERT</h2>
+    <h2 class="title-menue">DESSERT</h2>
     <ul class="container-menue">
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Paris-brest</h3>
             <p>Revisité<span class="prix">18€</span></p>
 
         </li>
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Macaron au chocolat d'exception</h3>
             <p>Et glace à la vanille de madagascar<span class="prix">22€</span></p>
         </li>
-        <li class="_plat">
+        <li class="container-menue_plat">
             <h3>Mousse au chocolat</h3>
             <p>Au piment d'espelette et à la tuffe noire<span class="prix">23€s</span></p>               
         </li>
     </ul>
 
 </article>
-<button>Commander</button>
+<button class="buttom-command">Commander</button>
 <footer>
     <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
     <ul>
@@ -91,6 +92,7 @@
     </ul>
     
 </footer>
+</div>
 </body>
 
 </html>
