finish intgrattion index and restaurant

--- a/menue/a-la-francaise.html
+++ b/menue/a-la-francaise.html
@@ -27,6 +27,7 @@
         <i class="fa-regular fa-heart"></i>
     </div>
     </section>
+    <div class="super-container">
     <article>
         <h2 class="title-menue">ENTRÉES</h2>
         <ul class="container-menue">
@@ -40,12 +41,12 @@
             </li>
             <li class="container-menue_plat">
                 <h3>Soupe à l'oignon</h3>
-                <p>Revisitée <span class="prix">20e</span></p>
+                <p>Revisitée <span class="prix">20€</span></p>
             </li>
         </ul>
 
     </article>
-    <article>
+    <article >
         <h2 class="title-menue">PLATS</h2>
         <ul class="container-menue">
             <li class="container-menue_plat">
@@ -82,6 +83,7 @@
         </ul>
 
     </article>
+</div>
     <button class="buttom-command">Commander</button>
     <footer>
         <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
