--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -29,7 +29,8 @@
         <i class="fa-regular fa-heart"></i>
         </div>
     </section>
-    <article>
+    <div class="super-container">
+    <article >
         <h2 class="title-menue">ENTRÉES</h2>
         <ul class="container-menue">
             <li class="container-menue_plat">
@@ -42,7 +43,7 @@
             </li>
             <li class="container-menue_plat">
                 <h3>Soupe à l'oignon</h3>
-                <p>Revisitée <span class="prix">20e</span></p>
+                <p>Revisitée <span class="prix">20€</span></p>
             </li>
         </ul>
 
@@ -84,7 +85,8 @@
         </ul>
 
     </article>
-    <button>Commander</button>
+    </div>
+    <button class="buttom-command">Commander</button>
 <footer>
     <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
     <ul>
