--- a/menue/la-palette-du-gout.html
+++ b/menue/la-palette-du-gout.html
@@ -26,6 +26,7 @@
     <i class="fa-regular fa-heart"></i>
 </div>
 </section>
+<div class="super-container">
 <article >
     <h2 class="title-menue">ENTRÉES</h2>
     <ul class="container-menue">
@@ -39,7 +40,7 @@
         </li>
         <li class="container-menue_plat">
             <h3>Oeuf au plat</h3>
-            <p>assainné à la truffe sur lit de mousse<span class="prix">20e</span></p>
+            <p>assainné à la truffe sur lit de mousse<span class="prix">20€</span></p>
         </li>
     </ul>
 
@@ -76,11 +77,12 @@
         </li>
         <li class="container-menue_plat">
             <h3>Mousse au chocolat</h3>
-            <p>Au piment d'espelette et à la tuffe noire<span class="prix">23€s</span></p>               
+            <p>Au piment d'espelette et à la tuffe noire<span class="prix">23€</span></p>               
         </li>
     </ul>
 
 </article>
+</div>
 <button class="buttom-command">Commander</button>
 <footer>
     <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
