--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -26,6 +26,7 @@
         <i class="fa-regular fa-heart"></i>
         </div>
     </section>
+    <div class="super-container">
     <article>
         <h2 class="title-menue">ENTRÉES</h2>
         <ul class="container-menue">
@@ -39,11 +40,11 @@
             </li>
             <li class="container-menue_plat">
                 <h3>Homard et espuma de légumes</h3>
-                <p>Mariné aux zests d'orange <span class="prix">20e</span></p>
+                <p>Mariné aux zests d'orange <span class="prix">20€</span></p>
             </li>
             <li class="container-menue_plat">
                 <h3>Foie gras de canard cuit entier</h3>
-                <p>Confiture de figue et pain toasté <span class="prix">35e</span></p>
+                <p>Confiture de figue et pain toasté <span class="prix">35€</span></p>
             </li>
         </ul>
 
@@ -85,6 +86,7 @@
         </ul>
 
     </article>
+</div>
     <button class="buttom-command">Commander</button>
 
 <footer>
