--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Restaurants</h2>
         <div class="container">
             <a href="/menue/la-palette-du-gout.html">
-            <article>
+            <article class="restaurant_article">
             <div class="restaurant_new">Nouveau</div>
             <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="platdu restaurant La palette du goût">
@@ -56,7 +56,7 @@
         </article>
     </a>
     <a href="/menue/la-note-enchantee.html">
-        <article>
+        <article class="restaurant_article">
             <div class="restaurant_new">Nouveau</div>
             <img src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="plat du restaurant La note enchantée">
@@ -75,9 +75,9 @@
         </article>
     </a>
     <a href="/menue/le-declice-des-sens.html">
-        <article>
+        <article class="restaurant_article">
             <img src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="plat du restaurant Le délice des sense ">
+            alt="plat du restaurant Le délice des sense ">
             <h3>Le délice des sens</h3>
             <p>Folie-Méricourt</p>
             <i class="fa-regular fa-heart"></i>
