finish animation plat buttom apparition plat

--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -26,7 +26,10 @@
         <img src="../public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat La note enchantée">
         <div class="entete_title">
         <h1 class="police">La note enchantée</h1>
-        <i class="fa-regular fa-heart"></i>
+        <div class="icon">
+            <i class="fa-regular fa-heart heart-regular"></i>
+            <i class="fa-solid fa-heart heart-solid1"></i>
+        </div>
         </div>
     </section>
     <div class="super-container">
@@ -36,14 +39,17 @@
             <li class="container-menue_plat">
                 <h3>Tartare de poulpe acidlé</h3>
                 <p>Aux zests d'orange <span class="prix">25€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Velouté de légumes d'antan</h3>
                 <p>Carotte, panais,topinambour <span class="prix">35€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Soupe à l'oignon</h3>
                 <p>Revisitée <span class="prix">20€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
         </ul>
 
@@ -54,15 +60,18 @@
             <li class="container-menue_plat">
                 <h3>Coquilles Saint-jacques</h3>
                 <p>Accompagnées d'une pureé de panais<span class="prix">40€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
             </li>
             <li class="container-menue_plat">
                 <h3>Magret de canard</h3>
                 <p>Et parmentier de pommes de terres<span class="prix">35€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Pigeonneau d'ille-et-Vilaine</h3>
-                <p>Sur son lit de gnocchis aux légumes<span class="prix">44€</span></p>               
+                <p>Sur son lit de gnocchis aux légumes<span class="prix">44€</span></p> 
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>              
             </li>
         </ul>
     </article>
@@ -72,15 +81,18 @@
             <li class="container-menue_plat">
                 <h3>Pétales de violettes glacés</h3>
                 <p>Et purée de noisettes<span class="prix">18€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
             </li>
             <li class="container-menue_plat">
                 <h3>Fondant au chocolat</h3>
                 <p>Revisité<span class="prix">22€</span></p>
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Millefeuille croustillant</h3>
-                <p>Mystille et pâte d'amande<span class="prix">23€s</span></p>               
+                <p>Mystille et pâte d'amande<span class="prix">23€</span></p> 
+                <div class="validation-plat"><i class="fa-solid fa-check"></i></div>              
             </li>
         </ul>
 
