--- a/menue/la-palette-du-gout.html
+++ b/menue/la-palette-du-gout.html
@@ -35,17 +35,17 @@
     <ul class="container-menue">
         <li class="container-menue_plat">
             <h3>Fricassée d'escargot</h3>
-            <p>Au piment d'espelette<span class="prix">25€</span></p>
+           <p class="reduction-plat">Au piment d'espelette<span class="prix">25€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
         </li>
         <li class="container-menue_plat">
-            <h3>Foie gras de canard mi-cui</h3>
-            <p>et ses copeaux de truffe noire <span class="prix">35€</span></p>
+            <h3>Foie gras de canard mi-cuit</h3>
+            <p class="reduction-plat">et ses copeaux de truffe noire <span class="prix">35€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
         </li>
         <li class="container-menue_plat">
             <h3>Oeuf au plat</h3>
-            <p>assainné à la truffe sur lit de mousse<span class="prix">20€</span></p>
+            <p class="reduction-plat">assainné à la truffe sur lit de mousse<span class="prix">20€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
         </li>
     </ul>
@@ -56,18 +56,18 @@
     <ul class="container-menue">
         <li class="container-menue_plat">
             <h3>Filet de boeuf aux herbes</h3>
-            <p>Accompagnées de sa ribambelle de légumes<span class="prix">40€</span></p>
+            <p class="reduction-plat">Accompagnées de sa ribambelle de légumes<span class="prix">40€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
         </li>
         <li class="container-menue_plat">
             <h3>Parmentier de queue de boeuf</h3>
-            <p>À la truffe noire sur sa purée de panais<span class="prix">35€</span></p>
+            <p class="reduction-plat">À la truffe noire sur sa purée de panais<span class="prix">35€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
         </li>
         <li class="container-menue_plat">
             <h3>Flet de turbot</h3>
-            <p>Aux agrumes<span class="prix">44€</span></p>    
+            <p class="reduction-plat">Aux agrumes<span class="prix">44€</span></p>    
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>           
         </li>
     </ul>
@@ -77,18 +77,18 @@
     <ul class="container-menue">
         <li class="container-menue_plat">
             <h3>Paris-brest</h3>
-            <p>Revisité<span class="prix">18€</span></p>
+            <p class="reduction-plat">Revisité<span class="prix">18€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
         </li>
         <li class="container-menue_plat">
             <h3>Macaron au chocolat d'exception</h3>
-            <p>Et glace à la vanille de madagascar<span class="prix">22€</span></p>
+            <p class="reduction-plat">Et glace à la vanille de madagascar<span class="prix">22€</span></p>
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
         </li>
         <li class="container-menue_plat">
             <h3>Mousse au chocolat</h3>
-            <p>Au piment d'espelette et à la tuffe noire<span class="prix">23€</span></p>  
+            <p class="reduction-plat">Au piment d'espelette et à la tuffe noire<span class="prix">23€</span></p>  
             <div class="validation-plat"><i class="fa-solid fa-check"></i></div>             
         </li>
     </ul>
