--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             
                 <article class="restaurant_article">
-                    <a href="./menue/a-la-francaise.html"></a>
+                    <a href="./menue/a-la-francaise.html">
                     <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="plat du restaurant À la française ">
                     <h3>À la française</h3>
