--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -37,18 +37,18 @@
         <h2 class="title-menue">ENTRÉES</h2>
         <ul class="container-menue">
             <li class="container-menue_plat">
-                <h3>Tartare de poulpe acidlé</h3>
-                <p>Aux zests d'orange <span class="prix">25€</span></p>
+                <h3>Tartare de poulpe acidulé</h3>
+                <p  class="reduction-plat">Aux zests d'orange <span class="prix">25€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Velouté de légumes d'antan</h3>
-                <p>Carotte, panais,topinambour <span class="prix">35€</span></p>
+                <p class="reduction-plat">Carotte, panais,topinambour <span class="prix">35€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Soupe à l'oignon</h3>
-                <p>Revisitée <span class="prix">20€</span></p>
+                <p  class="reduction-plat">Revisitée <span class="prix">20€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
         </ul>
@@ -59,18 +59,18 @@
         <ul class="container-menue">
             <li class="container-menue_plat">
                 <h3>Coquilles Saint-jacques</h3>
-                <p>Accompagnées d'une pureé de panais<span class="prix">40€</span></p>
+                <p class="reduction-plat">Accompagnées d'une pureé de panais<span class="prix">40€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
             </li>
             <li class="container-menue_plat">
                 <h3>Magret de canard</h3>
-                <p>Et parmentier de pommes de terres<span class="prix">35€</span></p>
+                <p class="reduction-plat">Et parmentier de pommes de terres<span class="prix">35€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Pigeonneau d'ille-et-Vilaine</h3>
-                <p>Sur son lit de gnocchis aux légumes<span class="prix">44€</span></p> 
+                <p class="reduction-plat">Sur son lit de gnocchis aux légumes<span class="prix">44€</span></p> 
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>              
             </li>
         </ul>
@@ -80,18 +80,18 @@
         <ul class="container-menue">
             <li class="container-menue_plat">
                 <h3>Pétales de violettes glacés</h3>
-                <p>Et purée de noisettes<span class="prix">18€</span></p>
+                <p  class="reduction-plat">Et purée de noisettes<span class="prix">18€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
             </li>
             <li class="container-menue_plat">
                 <h3>Fondant au chocolat</h3>
-                <p>Revisité<span class="prix">22€</span></p>
+                <p  class="reduction-plat">Revisité<span class="prix">22€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Millefeuille croustillant</h3>
-                <p>Mystille et pâte d'amande<span class="prix">23€</span></p> 
+                <p class="reduction-plat">Mystille et pâte d'amande<span class="prix">23€</span></p> 
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>              
             </li>
         </ul>
