--- a/menue/la-palette-du-gout.html
+++ b/menue/la-palette-du-gout.html
@@ -13,100 +13,120 @@
     <title>ohmyfood</title>
     <link rel="icon" href="../public/images/logo/ohmyfood@2x.svg">
 </head>
+
 <body class="menue">
     <div class="lightgrey-background">
-    <header>
-        <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
-</header>
-<section class="entete">
-    <img src="../public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat La palette du goût">
-    <div class="entete_title">
-    <h1 class="police">La palette du goût</h1>
-    <div class="icon">
-        <i class="fa-regular fa-heart heart-regular"></i>
-        <i class="fa-solid fa-heart heart-solid1"></i>
+        <header>
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        </header>
+        <section class="entete">
+            <img src="../public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Plat La palette du goût">
+            <div class="entete_title">
+                <h1 class="police">La palette du goût</h1>
+                <div class="icon">
+                    <i class="fa-regular fa-heart heart-regular"></i>
+                    <i class="fa-solid fa-heart heart-solid1"></i>
+                </div>
+            </div>
+        </section>
+
+        <div class="super-container">
+            <article>
+                <h2 class="title-menue">ENTRÉES</h2>
+                <ul class="container-menue">
+
+                    <li class="container-menue_plat">
+                        <h3>Fricassée d'escargot</h3>
+                        <p class="reduction-plat">Au piment d'espelette<span class="prix">25€</span></p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                    <li class="container-menue_plat">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p class="reduction-plat">Et ses copeaux de truffe noire <span class="prix">35€</span></p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                    <li class="container-menue_plat">
+                        <h3>Oeuf au plat</h3>
+                        <p class="reduction-plat">Assaisonné à la truffe sur lit de mousse<span class="prix">20€</span>
+                        </p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                </ul>
+
+            </article>
+
+            <article>
+                <h2 class="title-menue">PLATS</h2>
+                <ul class="container-menue">
+                    <li class="container-menue_plat">
+                        <h3>Filet de boeuf aux herbes</h3>
+                        <p class="reduction-plat">Accompagnées de sa ribambelle de légumes<span class="prix">40€</span>
+                        </p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+
+                    </li>
+
+                    <li class="container-menue_plat">
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p class="reduction-plat">À la truffe noire sur sa purée de panais<span class="prix">35€</span>
+                        </p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                    <li class="container-menue_plat">
+                        <h3>Flet de turbot</h3>
+                        <p class="reduction-plat">Aux agrumes<span class="prix">44€</span></p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                </ul>
+            </article>
+
+            <article>
+                <h2 class="title-menue">DESSERT</h2>
+                <ul class="container-menue">
+
+                    <li class="container-menue_plat">
+                        <h3>Paris-brest</h3>
+                        <p class="reduction-plat">Revisité<span class="prix">18€</span></p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                    <li class="container-menue_plat">
+                        <h3>Macaron au chocolat d'exception</h3>
+                        <p class="reduction-plat">Et glace à la vanille de madagascar<span class="prix">22€</span></p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+
+                    <li class="container-menue_plat">
+                        <h3>Mousse au chocolat</h3>
+                        <p class="reduction-plat">Au piment d'espelette et à la tuffe noire<span class="prix">23€</span>
+                        </p>
+                        <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
+                    </li>
+                </ul>
+
+            </article>
+        </div>
+
+        <button class="buttom-command">Commander</button>
+
+        <footer>
+            <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
+            <ul>
+                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+                <li>Mentions légales</li>
+                <li>Contact</li>
+            </ul>
+
+        </footer>
     </div>
-</div>
-</section>
-<div class="super-container">
-<article >
-    <h2 class="title-menue">ENTRÉES</h2>
-    <ul class="container-menue">
-        <li class="container-menue_plat">
-            <h3>Fricassée d'escargot</h3>
-           <p class="reduction-plat">Au piment d'espelette<span class="prix">25€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-        </li>
-        <li class="container-menue_plat">
-            <h3>Foie gras de canard mi-cuit</h3>
-            <p class="reduction-plat">et ses copeaux de truffe noire <span class="prix">35€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-        </li>
-        <li class="container-menue_plat">
-            <h3>Oeuf au plat</h3>
-            <p class="reduction-plat">assainné à la truffe sur lit de mousse<span class="prix">20€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-        </li>
-    </ul>
-
-</article>
-<article>
-    <h2 class="title-menue">PLATS</h2>
-    <ul class="container-menue">
-        <li class="container-menue_plat">
-            <h3>Filet de boeuf aux herbes</h3>
-            <p class="reduction-plat">Accompagnées de sa ribambelle de légumes<span class="prix">40€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-
-        </li>
-        <li class="container-menue_plat">
-            <h3>Parmentier de queue de boeuf</h3>
-            <p class="reduction-plat">À la truffe noire sur sa purée de panais<span class="prix">35€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-        </li>
-        <li class="container-menue_plat">
-            <h3>Flet de turbot</h3>
-            <p class="reduction-plat">Aux agrumes<span class="prix">44€</span></p>    
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>           
-        </li>
-    </ul>
-</article>
-<article>
-    <h2 class="title-menue">DESSERT</h2>
-    <ul class="container-menue">
-        <li class="container-menue_plat">
-            <h3>Paris-brest</h3>
-            <p class="reduction-plat">Revisité<span class="prix">18€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-
-        </li>
-        <li class="container-menue_plat">
-            <h3>Macaron au chocolat d'exception</h3>
-            <p class="reduction-plat">Et glace à la vanille de madagascar<span class="prix">22€</span></p>
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
-        </li>
-        <li class="container-menue_plat">
-            <h3>Mousse au chocolat</h3>
-            <p class="reduction-plat">Au piment d'espelette et à la tuffe noire<span class="prix">23€</span></p>  
-            <div class="validation-plat"><i class="fa-solid fa-check"></i></div>             
-        </li>
-    </ul>
-
-</article>
-</div>
-<button class="buttom-command">Commander</button>
-<footer>
-    <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
-    <ul>
-        <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-        <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li>Mentions légales</li>
-        <li>Contact</li>
-    </ul>
-    
-</footer>
-</div>
 </body>
 
 </html>
