--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -35,22 +35,22 @@
         <ul class="container-menue">
             <li class="container-menue_plat">
                 <h3>Ravioles de foie gras</h3>
-                <p>Accompagnés de leur crème à la truffe <span class="prix">25€</span></p>
+                <p class="reduction-plat">Accompagnés de leur crème à la truffe <span class="prix">25€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Caviar osciètre</h3>
-                <p>Sur blini à la farine de blé noir<span class="prix">35€</span></p>
+                <p class="reduction-plat">Sur blini à la farine de blé noir<span class="prix">35€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Homard et espuma de légumes</h3>
-                <p>Mariné aux zests d'orange <span class="prix">20€</span></p>
+                <p class="reduction-plat">Mariné aux zests d'orange <span class="prix">20€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Foie gras de canard cuit entier</h3>
-                <p>Confiture de figue et pain toasté <span class="prix">35€</span></p>
+                <p class="reduction-plat">Confiture de figue et pain toasté <span class="prix">35€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
         </ul>
@@ -61,18 +61,18 @@
         <ul class="container-menue">
             <li class="container-menue_plat">
                 <h3>Noix de coquilles Saint-jacques</h3>
-                <p>Sur lit de purée de céléri-rave<span class="prix">40€</span></p>
+                <p class="reduction-plat">Sur lit de purée de céléri-rave<span class="prix">40€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
             </li>
             <li class="container-menue_plat">
                 <h3>Langoustine poêlée</h3>
-                <p>Purée de patate douce<span class="prix">35€</span></p>
+                <p class="reduction-plat">Purée de patate douce<span class="prix">35€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Mijoté de queue de boeuf</h3>
-                <p>Et riz sauvage aux zests de citron<span class="prix">44€</span></p>  
+                <p class="reduction-plat">Et riz sauvage aux zests de citron<span class="prix">44€</span></p>  
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>             
             </li>
         </ul>
@@ -82,18 +82,18 @@
         <ul class="container-menue">
             <li class="container-menue_plat">
                 <h3>Macaron noisette et chocolat</h3>
-                <p>Glace au caramel brun et sel de Guérande<span class="prix">18€</span></p>
+                <p class="reduction-plat">Glace au caramel brun et sel de Guérande<span class="prix">18€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
 
             </li>
             <li class="container-menue_plat">
                 <h3>Baba au rhum revisité</h3>
-                <p>Avec son coulis de citron<span class="prix">22€</span></p>
+                <p class="reduction-plat">Avec son coulis de citron<span class="prix">22€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
             </li>
             <li class="container-menue_plat">
                 <h3>Tarte au citron meringuée</h3>
-                <p>Destructurée<span class="prix">23€s</span></p> 
+                <p class="reduction-plat">Destructurée<span class="prix">23€s</span></p> 
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>              
             </li>
         </ul>
