the end of the finish of the last modification of the end of time for P3

--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -35,8 +35,8 @@
     <div class="super-container">
     <article >
         <h2 class="title-menue">ENTRÉES</h2>
-        <ul class="container-menue">
-            <li class="container-menue_plat">
+        <ul class="container-menue  order-appariton-plat1">
+            <li class="container-menue_plat ">
                 <h3>Tartare de poulpe acidulé</h3>
                 <p  class="reduction-plat">Aux zests d'orange <span class="prix">25€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>
@@ -56,7 +56,7 @@
     </article>
     <article>
         <h2 class="title-menue">PLATS</h2>
-        <ul class="container-menue">
+        <ul class="container-menue  order-appariton-plat2">
             <li class="container-menue_plat">
                 <h3>Coquilles Saint-jacques</h3>
                 <p class="reduction-plat">Accompagnées d'une pureé de panais<span class="prix">40€</span></p>
@@ -76,7 +76,7 @@
         </ul>
     </article>
     <article>
-        <h2 class="title-menue">DESSERT</h2>
+        <h2 class="title-menue  order-appariton-plat3">DESSERT</h2>
         <ul class="container-menue">
             <li class="container-menue_plat">
                 <h3>Pétales de violettes glacés</h3>
