--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -32,7 +32,7 @@
     <div class="super-container">
     <article>
         <h2 class="title-menue">ENTRÉES</h2>
-        <ul class="container-menue">
+        <ul class="container-menue  order-appariton-plat1">
             <li class="container-menue_plat">
                 <h3>Ravioles de foie gras</h3>
                 <p class="reduction-plat">Accompagnés de leur crème à la truffe <span class="prix">25€</span></p>
@@ -58,7 +58,7 @@
     </article>
     <article>
         <h2 class="title-menue">PLATS</h2>
-        <ul class="container-menue">
+        <ul class="container-menue  order-appariton-plat2">
             <li class="container-menue_plat">
                 <h3>Noix de coquilles Saint-jacques</h3>
                 <p class="reduction-plat">Sur lit de purée de céléri-rave<span class="prix">40€</span></p>
@@ -79,7 +79,7 @@
     </article>
     <article>
         <h2 class="title-menue">DESSERT</h2>
-        <ul class="container-menue">
+        <ul class="container-menue  order-appariton-plat3">
             <li class="container-menue_plat">
                 <h3>Macaron noisette et chocolat</h3>
                 <p class="reduction-plat">Glace au caramel brun et sel de Guérande<span class="prix">18€</span></p>
