--- a/menue/la-palette-du-gout.html
+++ b/menue/la-palette-du-gout.html
@@ -35,7 +35,7 @@
         <div class="super-container">
             <article>
                 <h2 class="title-menue">ENTRÉES</h2>
-                <ul class="container-menue">
+                <ul class="container-menue order-appariton-plat1">
 
                     <li class="container-menue_plat">
                         <h3>Fricassée d'escargot</h3>
@@ -62,7 +62,7 @@
 
             <article>
                 <h2 class="title-menue">PLATS</h2>
-                <ul class="container-menue">
+                <ul class="container-menue order-appariton-plat2">
                     <li class="container-menue_plat">
                         <h3>Filet de boeuf aux herbes</h3>
                         <p class="reduction-plat">Accompagnées de sa ribambelle de légumes<span class="prix">40€</span>
@@ -89,7 +89,7 @@
 
             <article>
                 <h2 class="title-menue">DESSERT</h2>
-                <ul class="container-menue">
+                <ul class="container-menue order-appariton-plat3">
 
                     <li class="container-menue_plat">
                         <h3>Paris-brest</h3>
