the end of the finish of the last modification of the end of time for P3

--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -19,7 +19,7 @@
     <div class="lightgrey-background">
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="./public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
 
     <section class="entete">
