--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -17,7 +17,7 @@
     <div class="lightgrey-background">
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="./public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <section class="entete">
         <img src="../public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="plat Le délice des sens">
