--- a/menue/a-la-francaise.html
+++ b/menue/a-la-francaise.html
@@ -18,7 +18,7 @@
     <div class="lightgrey-background">
     <header>
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img src="/public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+        <img src="./public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
     </header>
     <section class="entete">
         <img src="../public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
