the end of the finish of the last modification of the end of time for P3

--- a/menue/la-note-enchantee.html
+++ b/menue/la-note-enchantee.html
@@ -76,8 +76,8 @@
         </ul>
     </article>
     <article>
-        <h2 class="title-menue  order-appariton-plat3">DESSERT</h2>
-        <ul class="container-menue">
+        <h2 class="title-menue  ">DESSERT</h2>
+        <ul class="container-menue order-appariton-plat3">
             <li class="container-menue_plat">
                 <h3>Pétales de violettes glacés</h3>
                 <p  class="reduction-plat">Et purée de noisettes<span class="prix">18€</span></p>
