--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <h2>Fonctionnement</h2>
 
         <ol>
-            <li><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisisez un
+            <li class="li"><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisisez un
                 restaurant</li>
-            <li><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
-            <li><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+            <li  class="li"><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
+            <li  class="li"><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
         </ol>
 
     </section>
