--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="wridth=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/717562a013.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,10 +36,10 @@
         <h2>Fonctionnement</h2>
 
         <ol>
-            <li class="li"><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisisez un
-                restaurant</li>
-            <li  class="li"><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i>Composez votre menu</li>
-            <li  class="li"><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+            <li class="lioi"><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i><span class="lioi-text"></span>Choisisez un
+                restaurant</span></li>
+            <li  class="lioi"><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i><span class="lioi-text"> votre menu</span></li>
+            <li  class="lioi"><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i><span class="lioi-text"></span>Dégustez au restaurant</span></li>
         </ol>
 
     </section>
@@ -104,8 +104,9 @@
                         <i class="fa-solid fa-heart heart-solid1"></i>
                     </div>
                 </article>
-            <div>
-    </section>
+        </div>
+        </section>
+        
     <footer>
         <img src="public/images/logo/ohmyfood.png " alt="logo ohmyfood">
         <ul>
