--- a/menue/la-palette-du-gout.html
+++ b/menue/la-palette-du-gout.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="wridth=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/717562a013.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <div class="lightgrey-background">
         <header>
             <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <img src="./public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
+            <img src="../public/images/logo/ohmyfood@2x.svg" alt="logo ohmyfood">
         </header>
         <section class="entete">
             <img src="../public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
