--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <h2>Fonctionnement</h2>
 
         <ol>
-            <li class="lioi"><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i><span class="lioi-text"></span>Choisisez un
+            <li class="lioi"><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i><span class="lioi-text">Choisisez un
                 restaurant</span></li>
             <li  class="lioi"><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i><span class="lioi-text"> votre menu</span></li>
-            <li  class="lioi"><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i><span class="lioi-text"></span>Dégustez au restaurant</span></li>
+            <li  class="lioi"><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i><span class="lioi-text">Dégustez au restaurant</span></li>
         </ol>
 
     </section>
@@ -107,16 +107,16 @@
         </div>
         </section>
         
-    <footer>
-        <img src="public/images/logo/ohmyfood.png " alt="logo ohmyfood">
-        <ul>
-            <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-            <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
-        </ul>
-
-    </footer>
+        <footer>
+            <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+    
+        </footer>
 </body>
 
 </html>
