--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -102,16 +102,16 @@
 </div>
     <button class="buttom-command">Commander</button>
 
-<footer>
-    <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
-    <ul>
-        <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-        <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li>Mentions légales</li>
-        <li>Contact</li>
-    </ul>
-    
-</footer>
+    <footer>
+        <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
+        <ul>
+            <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+            <li><a href="#">Mentions légales</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+
+    </footer>
 </div>
 </body>
 
