--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                 <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:mailtestohmyfood@gmail.com?subject=HTML link">Contact</a></li>
             </ul>
     
         </footer>
