correct logo error

--- a/menue/a-la-francaise.html
+++ b/menue/a-la-francaise.html
@@ -104,7 +104,7 @@
 </div>
     <button class="buttom-command">Commander</button>
     <footer>
-        <img src="../public/images/logo/ohmyfood.png " alt="logo ohmyfood">
+        <img src="./public/images/logo/ohmyfood.png " alt="logo ohmyfood">
         <ul>
             <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
