correct bug fonctionnement hover icone

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <h2>Fonctionnement</h2>
 
         <ol>
-            <li class="lioi"><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i><span class="lioi-text">Choisisez un
+            <li ><span class="working_numbericon">1</span><i class="fa-solid fa-mobile-screen-button"></i><span class="lioi-text">Choisisez un
                 restaurant</span></li>
-            <li  class="lioi"><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i><span class="lioi-text"> votre menu</span></li>
-            <li  class="lioi"><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i><span class="lioi-text">Dégustez au restaurant</span></li>
+            <li><span class="working_numbericon">2</span><i class="fa-solid fa-list-ul"></i><span class="lioi-text"> votre menu</span></li>
+            <li><span class="working_numbericon">3</span><i class="fa-solid fa-store"></i><span class="lioi-text">Dégustez au restaurant</span></li>
         </ol>
 
     </section>
