--- a/menue/a-la-francaise.html
+++ b/menue/a-la-francaise.html
@@ -95,7 +95,7 @@
             </li>
             <li class="container-menue_plat">
                 <h3>Millefeuille croustillant</h3>
-                <p class="reduction-plat">Mystille et pâte d'amande<span class="prix">23€s</span></p>
+                <p class="reduction-plat">Mystille et pâte d'amande<span class="prix">23€</span></p>
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>               
             </li>
         </ul>
