--- a/menue/le-declice-des-sens.html
+++ b/menue/le-declice-des-sens.html
@@ -93,7 +93,7 @@
             </li>
             <li class="container-menue_plat">
                 <h3>Tarte au citron meringuée</h3>
-                <p class="reduction-plat">Destructurée<span class="prix">23€s</span></p> 
+                <p class="reduction-plat">Destructurée<span class="prix">23€</span></p> 
                 <div class="validation-plat"><i class="fa-solid fa-check"></i></div>              
             </li>
         </ul>
